add endpoint to retrieve all products
